[gd_scene load_steps=5 format=3 uid="uid://cvbkpkgd3eysk"]

[ext_resource type="Script" path="res://Credits/index.gd" id="1_ybn2x"]
[ext_resource type="Texture2D" uid="uid://3lhc7mvsvfgn" path="res://assets/backgrounds/background2.png" id="2_qvdfr"]
[ext_resource type="Theme" uid="uid://ckiied77ueyj" path="res://candlelight_theme.tres" id="3_aim3m"]

[sub_resource type="Theme" id="Theme_m5m8v"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ybn2x")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -16.0
offset_right = 168.0
offset_bottom = 264.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_qvdfr")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2
offset_right = 1151.0
offset_bottom = 608.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Credits" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_m5m8v")
theme_override_font_sizes/font_size = 36
text = "Credits"

[node name="Travis" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer/Travis"]
layout_mode = 2
theme = ExtResource("3_aim3m")
text = "Game Design, Art, Code, Sound By Travis Bumgarner"

[node name="TravisButton" type="Button" parent="CenterContainer/VBoxContainer/Travis"]
layout_mode = 2
focus_neighbor_top = NodePath("../../Helena/Helena Button")
focus_next = NodePath("../../Helena/Helena Button")
focus_previous = NodePath("../../Helena/Helena Button")
theme = ExtResource("3_aim3m")
text = "Visit"

[node name="Ricky" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer/Ricky"]
layout_mode = 2
theme = ExtResource("3_aim3m")
text = "Music By Ricky Brandes"

[node name="Helena" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer/Helena"]
layout_mode = 2
theme = ExtResource("3_aim3m")
text = "Font by Helena Zhang "

[node name="Helena Button" type="Button" parent="CenterContainer/VBoxContainer/Helena"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../../Travis/TravisButton")
theme = ExtResource("3_aim3m")
text = "Visit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Travis/TravisButton" to="." method="_on_travis_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Helena/Helena Button" to="." method="_on_helena_button_pressed"]
